# mofchecker-mcp

./: README.md  mcp_config_example.json  pyproject.toml  test_mcp_server.py
mofchecker/: __init__.py  mcp_server.py  utils.py
mofchecker/checks/: check_base.py
mofchecker/checks/utils/: get_indices.py
mofchecker/database/: __init__.py
tests/: test_mcp_server.py  test_mofchecker.py
